--- a/index.html
+++ b/index.html
@@ -3,83 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KITT Franco-Belge AI</title>
+    <title>KITT Franco-Belge</title>
     <style>
-        body { 
-            background-color: #000;
-            color: #fff;
-            font-family: 'Courier New', Courier, monospace;
-            overflow: hidden;
+        body {
             margin: 0;
-            height: 100vh;
-        }
-        #scanner {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100%;
-            height: 5px;
-            background: linear-gradient(to right, transparent, red, transparent);
-            opacity: 0.8;
-            transform: translate(-50%, -50%);
-            animation: scan 2s infinite;
-        }
-        @keyframes scan {
-            0% { transform: translate(-50%, -100%); }
-            50% { transform: translate(-50%, 0); }
-            100% { transform: translate(-50%, 100%); }
-        }
-        #init-button {
-            margin: 20px;
-            padding: 10px 20px;
-            background-color: #e50914;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(to right, #000, #333);
             color: #fff;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            cursor: pointer;
-            box-shadow: 0 0 10px rgba(229, 9, 20, 0.7);
-            transition: all 0.3s;
+            overflow: hidden;
         }
-        #init-button:hover {
-            background-color: #d30812;
+        #header {
+            text-align: center;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.7);
         }
-        #terminal {
-            overflow-y: auto;
-            height: 300px;
-            background-color: #111;
-            border-radius: 5px;
+        #main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+            position: relative;
+        }
+        #car {
+            width: 300px;
+            animation: bounce 2s infinite;
+        }
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-30px);
+            }
+            60% {
+                transform: translateY(-15px);
+            }
+        }
+        footer {
+            text-align: center;
             padding: 10px;
-            box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.1);
-            white-space: pre;
+            background: rgba(0, 0, 0, 0.7);
         }
     </style>
 </head>
 <body>
-    <div id="scanner"></div>
-    <h1 style="text-align: center;">KITT Franco-Belge AI</h1>
-    <button id="init-button">Initialize KITT</button>
-    <div id="terminal"></div>
-
+    <div id="header">
+        <h1>Welcome to KITT Franco-Belge</h1>
+    </div>
+    <div id="main">
+        <img id="car" src="https://example.com/kitt.png" alt="KITT Car" />
+    </div>
+    <footer>
+        <p>&copy; 2026 KITT Franco-Belge. All rights reserved.</p>
+    </footer>
     <script>
-        const terminal = document.getElementById('terminal');
-        const initButton = document.getElementById('init-button');
-        const greetings = ["Initializing KITT...", "Welcome to KITT Franco-Belge.", "AI Online!", "Ready for action!"];
-        let index = 0;
-
-        initButton.addEventListener('click', function() {
-            terminal.innerHTML = ''; // Clear previous logs
-            index = 0; // Reset index
-            typeWriter();
-        });
-
-        function typeWriter() {
-            if (index < greetings.length) {
-                terminal.innerHTML += greetings[index] + '\n';
-                index++;
-                setTimeout(typeWriter, 1500);
-            }
-        }
+        const audio = new Audio('https://example.com/sound-effect.mp3');
+        window.onload = () => {
+            audio.play();
+            setTimeout(() => audio.pause(), 5000);
+        };
     </script>
 </body>
 </html>
