Update index.html to include a futuristic KITT Franco-Belge page.

--- a/index.html
+++ b/index.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KITT Franco-Belge</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(to right, #000, #333);
-            color: #fff;
-            overflow: hidden;
-        }
-        #header {
-            text-align: center;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
-        }
-        #main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 80vh;
-            position: relative;
-        }
-        #car {
-            width: 300px;
-            animation: bounce 2s infinite;
-        }
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-30px);
-            }
-            60% {
-                transform: translateY(-15px);
-            }
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: rgba(0, 0, 0, 0.7);
-        }
-    </style>
-</head>
-<body>
-    <div id="header">
-        <h1>Welcome to KITT Franco-Belge</h1>
-    </div>
-    <div id="main">
-        <img id="car" src="https://example.com/kitt.png" alt="KITT Car" />
-    </div>
-    <footer>
-        <p>&copy; 2026 KITT Franco-Belge. All rights reserved.</p>
-    </footer>
-    <script>
-        const audio = new Audio('https://example.com/sound-effect.mp3');
-        window.onload = () => {
-            audio.play();
-            setTimeout(() => audio.pause(), 5000);
-        };
-    </script>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n    <meta charset=\"UTF-8\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n    <title>KITT Franco-Belge</title>\n    <style>\n        body {\n            margin: 0;\n            font-family: 'Courier New', Courier, monospace;\n            background: black;\n            color: white;\n            overflow: hidden;\n            animation: fadeIn 2s;\n        }\n        @keyframes fadeIn {\n            from { opacity: 0; }\n            to { opacity: 1; }\n        }\n        h1 {\n            text-align: center;\n            margin-top: 50px;\n            color: red;\n            text-shadow: 0 0 20px red;\n            animation: pulse 2s infinite;\n        }\n        @keyframes pulse {\n            0% { text-shadow: 0 0 20px red; }\n            50% { text-shadow: 0 0 40px red; }\n            100% { text-shadow: 0 0 20px red; }\n        }\n        .scanner {\n            position: relative;\n            width: 100%;\n            height: 5px;\n            background: red;\n            animation: scan 2s infinite;\n        }\n        @keyframes scan {\n            0% { left: -100%; }\n            50% { left: 100%; }\n            100% { left: -100%; }\n        }\n        button {\n            display: block;\n            margin: 50px auto;\n            padding: 10px 20px;\n            font-size: 16px;\n            background: red;\n            border: none;\n            color: white;\n            cursor: pointer;\n            animation: glow 1.5s infinite alternate;\n        }\n        @keyframes glow {\n            0% { box-shadow: 0 0 5px red; }\n            100% { box-shadow: 0 0 20px red; }\n        }\n        .terminal-text {\n            width: 80%;\n            margin: 0 auto;\n            font-family: monospace;\n            color: green;\n            white-space: nowrap;\n            overflow: hidden;\n            border-right: 4px solid green;\n            width: 0;\n            animation: typing 5s steps(30) forwards;\n        }\n        @keyframes typing {\n            from { width: 0; }\n            to { width: 80%; }\n        }\n    </style>\n</head>\n<body>\n    <h1>KITT Franco-Belge</h1>\n    <div class=\"scanner\"></div>\n    <div class=\"terminal-text\">Welcome to the KITT Control Center...</div>\n    <button onclick=\"playSound()\">Activate</button>\n    <audio id=\"sound\" src=\"data:audio/wav;base64,UklGRhEAAABXQVZFZm10IBAAAAABAAEAgLsAAABAAEAAAABAA==\"></audio>\n    <script>\n        function playSound() {\n            document.getElementById('sound').play();\n        }\n    </script>\n</body>\n</html>\n
