Updating index.html to include advanced features for KITT Franco-Belge page.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-<!DOCTYPE html>\n<html lang=\"en\">\n<head>\n    <meta charset=\"UTF-8\">\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n    <title>KITT Franco-Belge</title>\n    <style>\n        body {\n            background-color: black;\n            color: #00ff00;\n            font-family: monospace;\n        }\n        .scanner {\n            width: 100%;\n            height: 10px;\n            background: linear-gradient(90deg, #00ff00 50%, transparent 50%);\n            animation: scan 1s linear infinite;\n        }\n        @keyframes scan {\n            from { background-position: -100%; }\n            to { background-position: 100%; }\n        }\n        .heart {\n            width: 20px;\n            height: 20px;\n            background-color: red;\n            border-radius: 50%;\n            animation: pulse 1s infinite;\n        }\n        @keyframes pulse {\n            0% { transform: scale(1); }\n            50% { transform: scale(1.5); }\n            100% { transform: scale(1); }\n        }\n    </style>\n</head>\n<body>\n    <div class=\"scanner\"></div>\n    <div class=\"heart\"></div>\n    <script>\n        // Web Audio API setup\n        const audioContext = new (window.AudioContext || window.webkitAudioContext)();\n        function playSound(frequency) {\n            const oscillator = audioContext.createOscillator();\n            oscillator.type = 'sine';\n            oscillator.frequency.setValueAtTime(frequency, audioContext.currentTime);\n            oscillator.connect(audioContext.destination);\n            oscillator.start();\n            oscillator.stop(audioContext.currentTime + 0.5);\n        }\n        // Sound effects\n        window.onload = function() {\n            playSound(440); // Startup sound\n            document.body.addEventListener('click', () => playSound(300)); // Confirm beep\n            document.body.addEventListener('contextmenu', (e) => {\n                e.preventDefault();\n                playSound(200); // Error sound\n            });\n        };\n    </script>\n</body>\n</html>\n
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Futuristic KITT Franco-Belge</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: black;
+            color: white;
+            font-family: 'Arial', sans-serif;
+        }
+        #kitt {
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            overflow: hidden;
+            background: radial-gradient(circle, #222 0%, #000 100%);
+        }
+        .scanner {
+            position: absolute;
+            top: 20%;
+            left: 50%;
+            margin-left: -75px;
+            width: 150px;
+            height: 10px;
+            background: rgba(255, 0, 0, 0.8);
+            animation: scanner 2s linear infinite;
+        }
+        @keyframes scanner {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(100%); }
+        }
+        #heart {
+            position: absolute;
+            bottom: 20%;
+            left: 50%;
+            margin-left: -25px;
+            width: 50px;
+            height: 50px;
+            background: red;
+            clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+            animation: pulse 1.5s infinite;
+        }
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+        #terminal {
+            position: absolute;
+            bottom: 10%;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 10px;
+            border: 1px solid #fff;
+            background: rgba(0, 0, 0, 0.7);
+        }
+    </style>
+</head>
+<body>
+<div id="kitt">
+    <div class="scanner"></div>
+    <div id="heart"></div>
+    <div id="terminal">Welcome to KITT Franco-Belge Terminal Simulation</div>
+</div>
+<script>
+    const ctx = new (window.AudioContext || window.webkitAudioContext)();
+    const oscillator = ctx.createOscillator();
+    const gainNode = ctx.createGain();
+
+    oscillator.connect(gainNode);
+    gainNode.connect(ctx.destination);
+    gainNode.gain.value = 0.1;
+    oscillator.type = 'sine';
+    oscillator.frequency.setValueAtTime(440, ctx.currentTime);
+    oscillator.start();
+    setTimeout(() => oscillator.stop(), 1000);
+
+    // Particle effect logic can be added here
+    const particles = [];
+    function createParticle() {
+        particles.push({ x: Math.random() * window.innerWidth, y: Math.random() * window.innerHeight });
+    }
+    function animateParticles() {
+        // Animation logic for particles
+        requestAnimationFrame(animateParticles);
+    }
+    setInterval(createParticle, 100);
+    animateParticles();
+</script>
+</body>
+</html>
