--- a/index.html
+++ b/index.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KITT Franco-Belge</title>
-    <style>
-        body { font-family: Arial, sans-serif; background-color: #0e0e0e; color: #fff; }
-        .terminal { background: black; color: lime; padding: 10px; border: 1px solid #444; }
-        .scanner { animation: scan 1s infinite; }
-        @keyframes scan {
-            0% { background-color: rgba(0, 255, 0, 0); }
-            50% { background-color: rgba(0, 255, 0, 0.5); }
-            100% { background-color: rgba(0, 255, 0, 0); }
-        }
-        #interactive-btn { padding: 10px 20px; color: white; background-color: #007bff; border: none; cursor: pointer; }
-        #particles-js { position: absolute; width: 100%; height: 100%; z-index: -1; }
-    </style>
+    <title>KITT Franco-Belge Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>KITT Franco-Belge</h1>
-    <div class="terminal">$ KITT Terminal&gt;</div>
-    <button id="interactive-btn">Click Me!</button>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
+    <header>
+        <h1>Welcome to the KITT Franco-Belge Experience!</h1>
+    </header>
+    <main>
+        <section class="intro">
+            <h2>About KITT</h2>
+            <p>KITT, the iconic car from the 1980s TV show, is back with a futuristic upgrade, featuring animations, effects, and synthesized sounds!</p>
+        </section>
+        <section class="animations">
+            <h2>Animations and Effects</h2>
+            <div id="kitt-animation"></div>
+        </section>
+    </main>
+    <footer>
+        <p>© 2026 KITT Franco-Belge. All rights reserved.</p>
+    </footer>
     <script>
-        particlesJS.load('particles-js', 'particles.json', function() {
-            console.log('particles.js loaded - callback');
-        });
-
-        document.getElementById('interactive-btn').addEventListener('click', function() {
-            const audio = new Audio('synthesized-sound.mp3');
-            audio.play();
-            document.querySelector('.terminal').innerHTML += '<br/>Command executed: Sound played!';
-        });
+        const context = new (window.AudioContext || window.webkitAudioContext)();
+        function playSound() {
+            const oscillator = context.createOscillator();
+            oscillator.type = 'sine';
+            oscillator.frequency.setValueAtTime(440, context.currentTime);
+            oscillator.connect(context.destination);
+            oscillator.start();
+            oscillator.stop(context.currentTime + 1);
+        }
+        document.getElementById('kitt-animation').addEventListener('click', playSound);
     </script>
 </body>
 </html>
